@@ -1,4 +1,4 @@
-/* Generated by re2c 0.9.7.dev on Tue May 03 10:35:36 2005 */
+/* Generated by re2c 0.9.7.dev on Wed May 11 08:17:25 2005 */
 #line 1 "idl.re"
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
